# FusionServe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  logging.yaml  mkdocs.yaml  pyproject.toml  settings.yaml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml
.kilo/plans/: 1775899980859-witty-mountain.md
docs/features/: automatic_api_generation.md  compression.md  filtering.md  graphql_api.md  observability.md  openapi_docs.md  pagination.md  rest_api.md  role_based_security.md  security.md  smart_comments.md
scripts/: gen_ref_pages.py
src/fusionserve/: __init__.py  auth.py  config.py  db.py  di.py  graphql.py  main.py  models.py  persistence.py  rest.py  skeleton.py
tests/: test_auth.py  test_di.py  test_graphql_helpers.py  test_integration_introspection.py  test_persistence.py  test_skeleton.py
