[project]
name = "FusionServe"
version = "0.1"
description = "Automatic generation of REST and GraphQL APIs by db introspection."
authors = [
    { name = "Marco Frassinelli", email = "fras.marco@gmail.com" }
]
license = { file = "LICENSE.txt" }
readme = { file = "README.md", content-type = "text/markdown" }
platforms = ["any"]
classifiers = [
    "Programming Language :: Python",
]
requires-python = ">=3.14"
dependencies = [
    "asyncpg",
    "brotli>=1.2.0",
    "fastapi",
    "fastapi_utilities",
    "granian[dotenv,pname,reload,rloop,uvloop]>=2.7.2",
    "icecream>=2.1.10",
    "importlib-metadata",
    "inflect",
    "jwt>=1.4.0",
    "litestar>=2.21.0",
    "odata-query",
    "prometheus_client",
    "psycopg",
    "psycopg-binary",
    "pydantic",
    "pydantic-settings>=2.13.1",
    "pydantic_core",
    "python-multipart",
    "sqlalchemy",
    "strawberry-graphql",
    "strawberry-sqlalchemy-mapper>=0.8.0",
    "suds",
    "typing-extensions",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocstrings-python>=2.0.3",
    "pre-commit>=4.5.1",
    "ruff>=0.15.4",
    "uvicorn[standard]>=0.41.0",
]

[project.scripts]
fusionserve = "fusionserve.main:run"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
